--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.3.3",
+    "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5"
   }
 }
